# launch-code-server

./: .gitignore  README.md  pyproject.toml
src/launch_code_server/: client.py  server.py
src/launch_code_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
