[project]
name = "launch-code-server"
version = "0.2.0"
description = "Launching vscode server with ease"
authors = [
    {name = "Kai Zhang",email = "zhangkai33@westlake.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]
client = [
    "fabric >=3.2.2",
    "sshconf >=0.2.5",
]

[project.scripts]
launch_server = "launch_code_server.client:main"
vscode_server = "launch_code_server.server:main"